--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ body {
     margin-top: 5rem;
     background: url("../images/bg1.jpg") no-repeat 0 0 / 100%  ;
 }
+
+.section2 {
+    margin-top: 1rem;
+}
 .top-title{}
 .common-title{
     font-size: 3rem;
@@ -27,7 +31,7 @@ body {
 .bg-img1 {
     display: flex;
     justify-content: right;
-
+    margin: 2rem 0 5rem 0;
 }
 
 .section3 {
